--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main","firstModification" ]
+    branches: [ "main"]
   pull_request:
-    branches: [ "main","firstModification" ]
+    branches: [ "main"]
 
 jobs:
 
@@ -15,6 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname
-           docker push matthieuhan/mlops:tagname
+      run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname | docker push matthieuhan/mlops:tagname
             
