--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,10 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        
     - name: Build the Docker image
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{secrets.DOCKER_USERNAME}}
-        password: ${{secrets.DOCKER_PASSWORD}}
       run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname | docker push matthieuhan/mlops:tagname
             
