--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,7 @@
 name: Docker Image CI
 
+name: Docker Image CI
+
 on:
   push:
     branches: [ "main"]
@@ -7,27 +9,17 @@ on:
     branches: [ "main"]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out the repo
-        uses: actions/checkout@v3
-
-      - name: Login to DockerHub
+    - uses: actions/checkout@v3
+    
+    - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          logout: true
-
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: <removed>:latest
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        
+    - name: Build the Docker image
+      run: docker build -t DockerImage . | docker push matthieuhan/mlops:DockerImage
+            
