--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: matthieuhan
-          password: Vqx4ea123!@
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
         
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname | docker push matthieuhan/mlops:tagname
