--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,13 @@ jobs:
         
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname | docker push matthieuhan/mlops:tagname
+    
+    - name: Publish to docker
+      uses: docker/build-push-action@V1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+        repository: matthieuhan/mlops
+        tags: latest,${{github.run_number}}
+
             
