--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,7 @@ jobs:
       run: docker build . --file Dockerfile --tag matthieuhan/mlops:tagname | docker push matthieuhan/mlops:tagname
     
     - name: Publish to docker
-      uses: docker/build-push-action@V1
+      uses: docker/build-push-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
