--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,7 +28,7 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: matthieuhan/mlops
-        tags: latest,${{github.run_number}}
+        tags: matthieuhan/mlops:latest
         push: true
 
             
